# cantrip-cli

./: CLAUDE.md  Cargo.toml  README.md
docs/plans/: 2026-03-07-feat-add-billing-command-plan.md
src/: credentials.rs  main.rs  output.rs
src/cli/: mod.rs
