[package]
name = "cantrip"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cantrip"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
